--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "mongoose": "^8.16.1",
     "razorpay": "^2.9.6"
   }
 }
